--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build && next export",
+    "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
@@ -22,6 +22,8 @@
     "eslint-config-prettier": "^8.4.0",
     "husky": "^7.0.4",
     "prettier": "^2.5.1",
+    "react-icons": "^4.3.1",
+    "swr": "^1.2.2",
     "typescript": "4.5.5"
   }
 }
