--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   "dependencies": {
     "next": "12.1.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "@googlemaps/react-wrapper": "^1.1.27"
   },
   "devDependencies": {
     "@types/node": "17.0.19",
     "@types/react": "17.0.39",
     "@typescript-eslint/eslint-plugin": "^5.12.1",
+    "@types/google.maps": "^3.48.2",
     "eslint": "8.9.0",
     "eslint-config-next": "12.1.0",
     "eslint-config-prettier": "^8.4.0",
